--- a/AZMonitoring/MainWindow.xaml
+++ b/AZMonitoring/MainWindow.xaml
@@ -8,8 +8,8 @@
         FontFamily="Tahoma"
         BorderBrush="Teal"
         Closing="Window_Closing"
-        MinHeight="400"
-        MinWidth="600"
+        MinHeight="600"
+        MinWidth="800"
         BorderThickness="2"
         FontSize="16" Background="#FFE4E4E4"
         Title="MainWindow" Height="600" Width="800" WindowStyle="None" AllowsTransparency="True" ResizeMode="CanResizeWithGrip">
@@ -47,10 +47,39 @@
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
-                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="160"/>
                 </Grid.ColumnDefinitions>
-                <StackPanel Grid.Column="1" >
-                </StackPanel>
+                <Border Grid.Column="1" BorderBrush="Teal" BorderThickness="1" Background="#4C383838">
+                    <Border.Effect>
+                        <DropShadowEffect Color="Teal" Direction="0" Opacity="0.8" BlurRadius="15" ShadowDepth="0"/>
+                    </Border.Effect>
+                    <StackPanel VerticalAlignment="Center">
+                        <Border x:Name="MainProvBTN" MinHeight="40" Cursor="Hand" BorderThickness="0,1" MaxHeight="40" MouseLeftButtonDown="MainProvBTN_MouseLeftButtonDown" BorderBrush="#33000000" Background="#0C000000">
+                            <StackPanel>
+                                <StackPanel Orientation="Horizontal" Margin="5" HorizontalAlignment="Center">
+                                    <TextBlock Text="المحافظات" Style="{DynamicResource TXT2}" FontSize="24"/>
+                                    <TextBlock x:Name="TXTProvOpenClose" Text="" Foreground="White"  VerticalAlignment="Center" Style="{DynamicResource TXT1}" FontSize="24" TextAlignment="Center"/>
+                                </StackPanel>
+                                <ListView x:Name="MainListViewProv" Height="300" SelectionChanged="MainListViewProv_SelectionChanged" Background="{x:Null}" FlowDirection="RightToLeft" BorderBrush="{x:Null}" Foreground="White" Margin="0,0,20,0">
+                                    <ListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Style="{DynamicResource TXT2}" Text="{Binding Name}"/>
+                                        </DataTemplate>
+                                    </ListView.ItemTemplate>
+                                </ListView>
+                            </StackPanel>
+                        </Border>
+                        <Border x:Name="MainSysManageBTN" Cursor="Hand" BorderThickness="0,1" Height="40" MouseLeftButtonDown="MainProvBTN_MouseLeftButtonDown" BorderBrush="#33000000" Background="#0C000000">
+                            <TextBlock Text="إدارة النظام" Style="{DynamicResource TXT2}" VerticalAlignment="Center" FontSize="24"/>
+                        </Border>
+                        <Border x:Name="MainSettingsBTN" Cursor="Hand" BorderThickness="0,1" Height="40" MouseLeftButtonDown="MainProvBTN_MouseLeftButtonDown" BorderBrush="#33000000" Background="#0C000000">
+                            <TextBlock Text="إعدادات البرنامج" Style="{DynamicResource TXT2}" VerticalAlignment="Center" FontSize="22" FontWeight="Normal"/>
+                        </Border>
+                        <Border x:Name="MainAboutPBTN" Cursor="Hand" BorderThickness="0,1" Height="40" MouseLeftButtonDown="MainProvBTN_MouseLeftButtonDown" BorderBrush="#33000000" Background="#0C000000">
+                            <TextBlock Text="حول المشروع" Style="{DynamicResource TXT2}" VerticalAlignment="Center" FontSize="22" FontWeight="Normal"/>
+                        </Border>
+                    </StackPanel>
+                </Border>
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <Frame x:Name="MainPageFrameContainer" NavigationUIVisibility="Hidden">
                         
