--- a/AZMonitoring/MainWindow.xaml
+++ b/AZMonitoring/MainWindow.xaml
@@ -69,19 +69,19 @@
                                 </ListView>
                             </StackPanel>
                         </Border>
-                        <Border x:Name="MainSysManageBTN" Cursor="Hand" BorderThickness="0,1" Height="40" MouseLeftButtonDown="MainProvBTN_MouseLeftButtonDown" BorderBrush="#33000000" Background="#0C000000">
+                        <Border x:Name="MainSysManageBTN" Cursor="Hand" BorderThickness="0,1" Height="40" MouseLeftButtonDown="MainSysManageBTN_MouseLeftButtonDown" BorderBrush="#33000000" Background="#0C000000">
                             <TextBlock Text="إدارة النظام" Style="{DynamicResource TXT2}" VerticalAlignment="Center" FontSize="24"/>
                         </Border>
-                        <Border x:Name="MainSettingsBTN" Cursor="Hand" BorderThickness="0,1" Height="40" MouseLeftButtonDown="MainProvBTN_MouseLeftButtonDown" BorderBrush="#33000000" Background="#0C000000">
+                        <Border x:Name="MainSettingsBTN" Cursor="Hand" BorderThickness="0,1" Height="40" MouseLeftButtonDown="MainSettingsBTN_MouseLeftButtonDown" BorderBrush="#33000000" Background="#0C000000">
                             <TextBlock Text="إعدادات البرنامج" Style="{DynamicResource TXT2}" VerticalAlignment="Center" FontSize="22" FontWeight="Normal"/>
                         </Border>
-                        <Border x:Name="MainAboutPBTN" Cursor="Hand" BorderThickness="0,1" Height="40" MouseLeftButtonDown="MainProvBTN_MouseLeftButtonDown" BorderBrush="#33000000" Background="#0C000000">
+                        <Border x:Name="MainAboutPBTN" Cursor="Hand" BorderThickness="0,1" Height="40" MouseLeftButtonDown="MainAboutPBTN_MouseLeftButtonDown" BorderBrush="#33000000" Background="#0C000000">
                             <TextBlock Text="حول المشروع" Style="{DynamicResource TXT2}" VerticalAlignment="Center" FontSize="22" FontWeight="Normal"/>
                         </Border>
                     </StackPanel>
                 </Border>
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
-                    <Frame x:Name="MainPageFrameContainer" NavigationUIVisibility="Hidden">
+                    <Frame x:Name="MainFrameContainer" NavigationUIVisibility="Hidden">
                         
                     </Frame>
                 </ScrollViewer>
