--- a/AZMonitoring/MainWindow.xaml
+++ b/AZMonitoring/MainWindow.xaml
@@ -54,6 +54,9 @@
                         <DropShadowEffect Color="Teal" Direction="0" Opacity="0.8" BlurRadius="15" ShadowDepth="0"/>
                     </Border.Effect>
                     <StackPanel VerticalAlignment="Center">
+                        <Border x:Name="MainDashboardBTN" Cursor="Hand" BorderThickness="0,1" Height="40" MouseLeftButtonDown="MainDashboardBTN_MouseLeftButtonDown" BorderBrush="#33000000" Background="#33000000">
+                            <TextBlock Text="لوحة التحكم" Style="{DynamicResource TXT2}" VerticalAlignment="Center" FontSize="24" FontWeight="Bold"/>
+                        </Border>
                         <Border x:Name="MainProvBTN" MinHeight="40" Cursor="Hand" BorderThickness="0,1" MaxHeight="40" BorderBrush="#33000000" Background="#0C000000">
                             <StackPanel>
                                 <StackPanel  MouseLeftButtonDown="MainProvBTN_MouseLeftButtonDown" Orientation="Horizontal" Margin="5" HorizontalAlignment="Center">
@@ -80,9 +83,9 @@
                         </Border>
                     </StackPanel>
                 </Border>
-                <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="15" BorderThickness="1" Background="#72FFFFFF" BorderBrush="Teal">
+                <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="15" BorderThickness="1" Background="#72FFFFFF" BorderBrush="Teal">
                     <ScrollViewer.Effect>
-                        <DropShadowEffect BlurRadius="10" ShadowDepth="0" Opacity="0.5" Color="Teal"/>
+                        <DropShadowEffect BlurRadius="5" ShadowDepth="0" Opacity="0.8" Color="Teal"/>
                     </ScrollViewer.Effect>
                     <Frame x:Name="MainFrameContainer" NavigationUIVisibility="Hidden">
                         
