--- a/AZMonitoring/Views/SysManage/Prov_manage_Page.xaml
+++ b/AZMonitoring/Views/SysManage/Prov_manage_Page.xaml
@@ -4,11 +4,62 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:AZMonitoring.Views.SysManage"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"                                                                                                                                                                                                                  
+      Foreground="White"
+      FontFamily="Tahoma"
+      FontSize="16"
+      FlowDirection="RightToLeft"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Prov_manage_Page">
-
-    <Grid>
-        <TextBlock Text="صفحة ادارة المحافظات"/>
-    </Grid>
+    <StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <TextBlock Text="اختر الامر" VerticalAlignment="Center" FontWeight="Bold"/>
+            <ComboBox x:Name="CBSAED" Width="200" SelectionChanged="CBSAED_SelectionChanged" Margin="10">
+                <ComboBoxItem Content="اضافة"/>
+                <ComboBoxItem Content="تعديل"/>
+                <ComboBoxItem Content="حذف"/>
+            </ComboBox>
+            <TextBlock x:Name="TXTChprove" Text="اختر المحافظة" VerticalAlignment="Center" FontWeight="Bold"/>
+            <ComboBox x:Name="CBChProv" SelectionChanged="CBChProv_SelectionChanged"  Margin="10" Width="200">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Name}"/>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+        </StackPanel>
+        <GroupBox x:Name="GBAE"
+                  Margin="10"
+                  Padding="10"
+                  Header="اضافة/تعديل محافظة القاهرة">
+            <Grid Height="250">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="اسم المحافظة"  VerticalAlignment="Center" FontWeight="Bold"/>
+                <TextBox x:Name="TXTName" Grid.Column="1" Grid.ColumnSpan="2" Margin="5"/>
+                <TextBlock Text="تفاصيل المحافظة" Grid.Row="1"  VerticalAlignment="Center" FontWeight="Bold"/>
+                <TextBox x:Name="TXTDes" Grid.Column="1" Grid.ColumnSpan="2" TextWrapping="WrapWithOverflow" AcceptsReturn="True" Grid.Row="1" Margin="5"/>
+                <TextBlock Text="مدير الادارة المركزية" Grid.Row="2" Grid.ColumnSpan="2" TextAlignment="Center"  VerticalAlignment="Center" FontWeight="Bold"/>
+                <TextBlock Text="الوكيل الثقافي (مدير عام)" Grid.Row="2" Grid.Column="2" TextAlignment="Center"  VerticalAlignment="Center" FontWeight="Bold"/>
+                <TextBlock Text="مدير رعاية الطلاب" Grid.Row="4" Grid.ColumnSpan="2" TextAlignment="Center"  VerticalAlignment="Center" FontWeight="Bold"/>
+                <TextBlock Text="الوكيل الشرعي (مدير عام)" Grid.Row="4" Grid.Column="2" TextAlignment="Center"  VerticalAlignment="Center" FontWeight="Bold"/>
+                <TextBox x:Name="TXTHCA" KeyUp="TXTHCA_KeyUp" Margin="5" Grid.Row="3" Grid.ColumnSpan="2"/>
+                <TextBox x:Name="TXTCAG" KeyUp="TXTCAG_KeyUp" Margin="5" Grid.Row="3" Grid.Column="2"/>
+                <TextBox x:Name="TXTWM" KeyUp="TXTWM_KeyUp" Margin="5" Grid.Row="5" Grid.ColumnSpan="2"/>
+                <TextBox x:Name="TXTLAG" KeyUp="TXTLAG_KeyUp" Margin="5" Grid.Row="5" Grid.Column="2"/>
+            </Grid>
+        </GroupBox>
+        <Button x:Name="BTNSave" Content="حفظ التغيرات" HorizontalAlignment="Center" Padding="5" Click="BTNSave_Click" FontWeight="Bold"/>
+    </StackPanel>
 </Page>
